<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center" android:background="@color/white" android:layout_width="300.0dip" android:layout_height="wrap_content">
	<LinearLayout android:gravity="center" android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
		<TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_title" />
		<TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/rate_msg" />
		<TextView android:textSize="16.0sp" android:textColor="@color/rateDialogButtonTextColor" android:gravity="end" android:id="@id/rateNow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/rate_now" />
		<TextView android:textSize="16.0sp" android:textColor="@color/rateDialogButtonTextColor" android:gravity="end" android:id="@id/noThanks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/no_thanks" />
		<TextView android:textSize="16.0sp" android:textColor="@color/rateDialogButtonTextColor" android:gravity="end" android:id="@id/maybeLater" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/maybe_later" />
	</LinearLayout>
</RelativeLayout>
